training and identification

--- a/speech_model/testing.ipynb
+++ b/speech_model/testing.ipynb
@@ -2,31 +2,90 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/Bianka/Desktop/szkoła/biometria/in-the-wild-verification\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
-    "if os.path.basename(os.getcwd()) != 'biometria2':\n",
-    "    os.chdir(os.path.dirname(os.getcwd()))"
+    "import plotly.express as px\n",
+    "import plotly.io as pio\n",
+    "import pandas as pd\n",
+    "\n",
+    "if os.path.basename(os.getcwd()) != 'in-the-wild-verification':\n",
+    "    os.chdir(os.path.dirname(os.getcwd()))\n",
+    "\n",
+    "print(os.getcwd())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_line(x, y, x_label, y_label):\n",
+    "    fig = px.line(x = x, y = y,\n",
+    "              labels={'x':x_label,\n",
+    "                'y': y_label,\n",
+    "                },)\n",
+    "    fig.update_layout(height=400, width=800, showlegend=False, font=dict(family=\"CMU Serif\",size=14))\n",
+    "    config = {\n",
+    "    'toImageButtonOptions': {\n",
+    "        'format': 'png', # one of png, svg, jpeg, webp\n",
+    "        'height': 600, 'width': 900, 'scale':6\n",
+    "    }}\n",
+    "    \n",
+    "    fig.show(config=config)\n",
+    "    # pio.write_image(fig, f\"images/{name}.png\", scale=6, width=900, height=500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = pd.read_csv(\"speech_id_checkpoint/Stats\", sep='\\t', index_col=False)\n",
+    "\n",
+    "results.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tloss = results['Total loss'].tolist()\n",
+    "tloss_epoch = [sum(tloss[i:i+6])/6 for i in range(0,len(tloss),6)][:-1]\n",
+    "epochs = range(0, int((len(results)-1)/6))\n",
+    "\n",
+    "plot_line(epochs, tloss_epoch, 'Epoch', 'Total loss')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from speech_embedder_net import SpeechEmbedder\n",
-    "from Speaker_Verification.utils import mfccs_and_spec\n",
+    "from speech_model.utils import mfccs_and_spec\n",
     "import torch\n",
-    "from hparam import hparam as hp\n",
     "\n",
     "class SpekerVerifier:\n",
     "    \"\"\"Class for loading the model and computing speech embeddings\"\"\"\n",
     "    def __init__(\n",
     "            self,\n",
-    "            model_path: str = './speech_id_checkpoint/ckpt_epoch_360_batch_id_28.pth'\n",
+    "            model_path: str = 'speech_id_checkpoint/ckpt_epoch_180_batch_id_191.pth'\n",
     "            ) -> None:\n",
     "        self.model = SpeechEmbedder()\n",
     "        self.model.load_state_dict(torch.load(model_path))\n",
@@ -43,13 +102,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "sample_file = 'split_data/train/id10001/00001.wav'\n",
     "sample_file_same = 'split_data/train/id10001/00002.wav'\n",
-    "sample_file_diff = 'split_data/train/id10002/00002.wav'\n",
+    "sample_file_diff = 'split_data/train/id10006/00002.wav'\n",
     "\n",
     "model = SpekerVerifier()\n",
     "embedding_org = model.compute_embedding(sample_file)\n",
@@ -59,16 +118,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([0.9327], grad_fn=<SumBackward1>)"
+       "tensor([0.8931], grad_fn=<SumBackward1>)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,16 +140,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([0.7410], grad_fn=<SumBackward1>)"
+       "tensor([0.7422], grad_fn=<SumBackward1>)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
