--- a/speech_model/testing.ipynb
+++ b/speech_model/testing.ipynb
@@ -106,79 +106,4 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_file = 'split_data/train/id10001/00001.wav'\n",
-    "sample_file_same = 'split_data/train/id10001/00002.wav'\n",
-    "sample_file_diff = 'split_data/train/id10006/00002.wav'\n",
-    "\n",
-    "model = SpekerVerifier()\n",
-    "embedding_org = model.compute_embedding(sample_file)\n",
-    "embedding_same = model.compute_embedding(sample_file_same)\n",
-    "embedding_diff = model.compute_embedding(sample_file_diff)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([0.8931], grad_fn=<SumBackward1>)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import torch.nn.functional as F\n",
-    "\n",
-    "F.cosine_similarity(embedding_org, embedding_same)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([0.7422], grad_fn=<SumBackward1>)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "F.cosine_similarity(embedding_org, embedding_diff)"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.6"
-  },
-  "orig_nbformat": 4
- },
- "nbformat": 4,
- "nbformat_minor": 2
-}
+    "sample_file = 'split_data/train/id10
