--- a/notebooks/TTS_Example.ipynb
+++ b/notebooks/TTS_Example.ipynb
@@ -12,7 +12,7 @@
     "# generate speech by cloning a voice using default settings\n",
     "tts.tts_to_file(text=\"It took me quite a long time to develop a voice, and now that I have it I'm not going to be silent.\",\n",
     "                file_path=\"output.wav\",\n",
-    "                speaker_wav=\"\",\n",
+    "                speaker_wav=\"speaker.wav\",\n",
     "                language=\"en\")"
    ]
   },
